# RealTImeTranslateTTS

./: .gitattributes  .gitignore  README.md  build_espeak_android.sh  generate_espeak_data.sh  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  espeak_jni.cc
app/src/main/cpp/lib/pkgconfig/: espeak-ng.pc
build-espeak-arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  espeak-ng.pc
build-espeak-arm64-v8a/src/: CTestTestfile.cmake  cmake_install.cmake  espeak-ng
build-espeak-arm64-v8a/src/libespeak-ng/: CTestTestfile.cmake  cmake_install.cmake
build-espeak-arm64-v8a/src/libespeak-ng/include/: config.h
build-espeak-arm64-v8a/src/speechPlayer/: CTestTestfile.cmake  cmake_install.cmake
build-espeak-arm64-v8a/src/ucd-tools/: CTestTestfile.cmake  cmake_install.cmake
build-espeak-armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
build-espeak-armeabi-v7a/src/: CTestTestfile.cmake  cmake_install.cmake  espeak-ng
docs/: UIUpdate.md  high-concurrency-function-level-change-list.md  iteration-roadmap.md  release-notes-v1.2.2.md  release-notes-v1.2.3.md  sherpa-onnx-analysis.md  swr-quality-upgrade-closure-plan.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
